--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="page">
         <header class="header">
-            <img src="./images/__logo.png">
+            <img src="./images/logo.png" class="header__logo">
+            <a href="#" class="header__lang-link">RU</a>
+            <a href="#" class="header__lang-link">EN</a>
         </header>
         <main class="content">
             <div class="lead"></div>
