--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <a href="#" class="header__lang-link">EN</a>
         </header>
         <main class="content">
-            <div class="lead"></div>
+            <div class="lead">
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках нвовстей, а здесь</p>
+                <img src="./images/__image.png" class="lead__image">
+                <p class="lead__caption">ваша полка - верхняя</p>
+            </div>
             <div class="intro"></div>
             <div class="photo-grid"></div>
             <div class="places"></div>
