--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
                     <li>Аэропортов 241</li>
                 </ul>
             </div>
-            <div class="photo-grid"></div>
+            <div class="photo-grid">
+                <img src="./images/__item.png" class="photo-grid__item">
+                <img src="./images/__item-1.png" class="photo-grid__item">
+                <img src="./images/__item-2.png" class="photo-grid__item">
+                <img src="./images/__item-3.png" class="photo-grid__item">
+                <img src="./images/__item-4.png" class="photo-grid__item">
+                <img src="./images/__item-5.png" class="photo-grid__item">
+                <img src="./images/__item-6.png" class="photo-grid__item">
+                <img src="./images/__item-7.png" class="photo-grid__item">
+                <img src="./images/__item-8.png" class="photo-grid__item">
+                <img src="./images/__item-9.png" class="photo-grid__item">
+                <img src="./images/__item-10.png" class="photo-grid__item">
+                <img src="./images/__item-11.png" class="photo-grid__item">
+            </div>
             <div class="places"></div>
             <div class="cover"></div>
         </main>
