--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках нвовстей, а здесь</p>
-                <img src="./images/__image.png" class="lead__image">
+                <img src="./images/1/__image.png" class="lead__image">
                 <p class="lead__caption">ваша полка - верхняя</p>
             </div>
             <div class="intro">
@@ -33,20 +33,71 @@
                 </ul>
             </div>
             <div class="photo-grid">
-                <img src="./images/__item.png" class="photo-grid__item">
-                <img src="./images/__item-1.png" class="photo-grid__item">
-                <img src="./images/__item-2.png" class="photo-grid__item">
-                <img src="./images/__item-3.png" class="photo-grid__item">
-                <img src="./images/__item-4.png" class="photo-grid__item">
-                <img src="./images/__item-5.png" class="photo-grid__item">
-                <img src="./images/__item-6.png" class="photo-grid__item">
-                <img src="./images/__item-7.png" class="photo-grid__item">
-                <img src="./images/__item-8.png" class="photo-grid__item">
-                <img src="./images/__item-9.png" class="photo-grid__item">
-                <img src="./images/__item-10.png" class="photo-grid__item">
-                <img src="./images/__item-11.png" class="photo-grid__item">
+                <img src="./images/1/__item.png" class="photo-grid__item">
+                <img src="./images/1/__item-1.png" class="photo-grid__item">
+                <img src="./images/1/__item-2.png" class="photo-grid__item">
+                <img src="./images/1/__item-3.png" class="photo-grid__item">
+                <img src="./images/1/__item-4.png" class="photo-grid__item">
+                <img src="./images/1/__item-5.png" class="photo-grid__item">
+                <img src="./images/1/__item-6.png" class="photo-grid__item">
+                <img src="./images/1/__item-7.png" class="photo-grid__item">
+                <img src="./images/1/__item-8.png" class="photo-grid__item">
+                <img src="./images/1/__item-9.png" class="photo-grid__item">
+                <img src="./images/1/__item-10.png" class="photo-grid__item">
+                <img src="./images/1/__item-11.png" class="photo-grid__item">
             </div>
-            <div class="places"></div>
+            <div class="places">
+                <div class="place">
+                    <h2 class="place__title">Куршская коса</h2>
+                    <img src='images/2/__image.png' class="place__image">
+                    <div class="place__website">
+                        <p class="place__url-heading">URL</p>
+                        <a href="#" class="place__link">park-kosa.ru</a>
+                    </div>
+                    <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                    <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title"></h2>
+                    <img src='images/' class="place__image">
+                    <div class="place__website">
+                        <p class="place__url-heading">URL</p>
+                        <a href="#" class="place__link"></a>
+                    </div>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title"></h2>
+                    <img src='images/' class="place__image">
+                    <div class="place__website">
+                        <p class="place__url-heading">URL</p>
+                        <a href="#" class="place__link"></a>
+                    </div>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title"></h2>
+                    <img src='images/' class="place__image">
+                    <div class="place__website">
+                        <p class="place__url-heading">URL</p>
+                        <a href="#" class="place__link"></a>
+                    </div>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                </div>
+                <div class="place">
+                    <h2 class="place__title"></h2>
+                    <img src='images/' class="place__image">
+                    <div class="place__website">
+                        <p class="place__url-heading">URL</p>
+                        <a href="#" class="place__link"></a>
+                    </div>
+                    <p class="place__paragraph"></p>
+                    <p class="place__paragraph"></p>
+                </div>
+            </div>
             <div class="cover"></div>
         </main>
         <footer class="footer"></footer>
