--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="page">
         <header class="header">
             <img src="./images/logo.png" class="header__logo">
-            <a href="#" class="header__lang-link">RU</a>
-            <a href="#" class="header__lang-link">EN</a>
+            <a href="#" class="header__lang-link" target="_self">RU</a>
+            <a href="#" class="header__lang-link" target="_self">EN</a>
         </header>
         <main class="content">
             <div class="lead">
@@ -52,7 +52,7 @@
                     <img src='images/2/__image.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="#" class="place__link">park-kosa.ru</a>
+                        <a href="#" class="place__link" target="_blank">park-kosa.ru</a>
                     </div>
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                     <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -62,7 +62,7 @@
                     <img src='images/2/__image-1.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="#" class="place__link">National Geographic</a>
+                        <a href="#" class="place__link" target="_blank">National Geographic</a>
                     </div>
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                         тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -74,7 +74,7 @@
                     <img src='images/2/__image-2.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="#" class="place__link">Facebook</a>
+                        <a href="#" class="place__link" target="_blank">Facebook</a>
                     </div>
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -85,7 +85,7 @@
                     <img src='images/2/__image-3.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="#" class="place__link">https://vk.com/baikalmile</a>
+                        <a href="#" class="place__link" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -97,7 +97,7 @@
                     <img src='images/2/__image-4.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="#" class="place__link">http://vodlozero.ru/</a>
+                        <a href="#" class="place__link" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
@@ -111,6 +111,13 @@
                 <div class="cover__overlay"></div>
             </div>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <a class="footer__link" href="#" target="_blank">Карты</a>
+            <a class="footer__link" href="#" target="_blank">Погода</a>
+            <a class="footer__link" href="#" target="_blank">Расписание</a>
+            <a class="footer__link" href="#" target="_blank">Календарь</a>
+            <a class="footer__link" href="#" target="_blank">Путешествия</a>
+            <div class="footer__copyright">© 2021. Денис Мяготин</div>
+        </footer>
     </div>
 </body>
