--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 </div>
             </div>
             <div class="cover">
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__title">До Байкала «на собаках»</a>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                <img src="./images/__background.png" class="cover__background">
-                <div class="cover__overlay"></div>
+                <div class="cover__overlay">
+                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__title">До Байкала «на собаках»</a>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                </div>
             </div>
         </main>
         <footer class="footer">
