--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="page">
         <header class="header">
             <img src="./images/logo.png" class="header__logo">
-            <a href="#" class="header__lang-link" target="_self">RU</a>
-            <a href="#" class="header__lang-link" target="_self">EN</a>
+            <div class="header__lang-links">
+                <a href="#" class="header__lang-link" target="_self">RU</a>
+                <a href="#" class="header__lang-link" target="_self">EN</a>
+            </div>
         </header>
         <main class="content">
             <div class="lead">
@@ -59,7 +61,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
-                    <img src='images/2/__image-1.png' class="place__image">
+                    <img src='images/2/__image-3.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank">National Geographic</a>
@@ -82,7 +84,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
-                    <img src='images/2/__image-3.png' class="place__image">
+                    <img src='images/2/__image-1.png' class="place__image">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
@@ -112,11 +114,13 @@
             </div>
         </main>
         <footer class="footer">
-            <a class="footer__link" href="#" target="_blank">Карты</a>
-            <a class="footer__link" href="#" target="_blank">Погода</a>
-            <a class="footer__link" href="#" target="_blank">Расписание</a>
-            <a class="footer__link" href="#" target="_blank">Календарь</a>
-            <a class="footer__link" href="#" target="_blank">Путешествия</a>
+            <div class="footer__links">
+                <a class="footer__link" href="#" target="_blank">Карты</a>
+                <a class="footer__link" href="#" target="_blank">Погода</a>
+                <a class="footer__link" href="#" target="_blank">Расписание</a>
+                <a class="footer__link" href="#" target="_blank">Календарь</a>
+                <a class="footer__link" href="#" target="_blank">Путешествия</a>
+            </div>
             <div class="footer__copyright">© 2021. Денис Мяготин</div>
         </footer>
     </div>
