--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-<link rel="stylesheet" href="./pages/index.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +51,7 @@
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <img src='images/2/__image.png' class="place__image">
-                    <div class="place__website">
+                    <div class="place__website"> 
                         <p class="place__url-heading">URL</p>
                         <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
                     </div>
@@ -125,3 +124,4 @@
         </footer>
     </div>
 </body>
+</html>
