--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img src="./images/logo.png" class="header__logo">
+            <img src="./images/logo.png" class="header__logo" alt="лого">
             <div class="header__lang-links">
                 <a href="#" class="header__lang-link" target="_self">RU</a>
                 <a href="#" class="header__lang-link" target="_self">EN</a>
@@ -19,7 +19,7 @@
             <div class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках нвовстей, а здесь</p>
-                <img src="./images/1/__image.png" class="lead__image">
+                <img src="./images/1/__image.png" class="lead__image" alt="картинка">
                 <p class="lead__caption">ваша полка - верхняя</p>
             </div>
             <div class="intro">
@@ -34,23 +34,23 @@
                 </ul>
             </div>
             <div class="photo-grid">
-                <img src="./images/1/__item.png" class="photo-grid__item">
-                <img src="./images/1/__item-1.png" class="photo-grid__item">
-                <img src="./images/1/__item-2.png" class="photo-grid__item">
-                <img src="./images/1/__item-3.png" class="photo-grid__item">
-                <img src="./images/1/__item-4.png" class="photo-grid__item">
-                <img src="./images/1/__item-5.png" class="photo-grid__item">
-                <img src="./images/1/__item-6.png" class="photo-grid__item">
-                <img src="./images/1/__item-7.png" class="photo-grid__item">
-                <img src="./images/1/__item-8.png" class="photo-grid__item">
-                <img src="./images/1/__item-9.png" class="photo-grid__item">
-                <img src="./images/1/__item-10.png" class="photo-grid__item">
-                <img src="./images/1/__item-11.png" class="photo-grid__item">
+                <img src="./images/1/__item.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-1.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-2.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-3.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-4.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-5.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-6.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-7.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-8.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-9.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-10.png" class="photo-grid__item" alt="картинка">
+                <img src="./images/1/__item-11.png" class="photo-grid__item" alt="картинка">
             </div>
             <div class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
-                    <img src='images/2/__image.png' class="place__image">
+                    <img src='images/2/__image.png' class="place__image" alt="картинка">
                     <div class="place__website"> 
                         <p class="place__url-heading">URL</p>
                         <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
-                    <img src='images/2/__image-3.png' class="place__image">
+                    <img src='images/2/__image-3.png' class="place__image" alt="картинка">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank">National Geographic</a>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
-                    <img src='images/2/__image-2.png' class="place__image">
+                    <img src='images/2/__image-2.png' class="place__image" alt="картинка">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href=" https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank">Facebook</a>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
-                    <img src='images/2/__image-1.png' class="place__image">
+                    <img src='images/2/__image-1.png' class="place__image" alt="картинка">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
-                    <img src='images/2/__image-4.png' class="place__image">
+                    <img src='images/2/__image-4.png' class="place__image" alt="картинка">
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
