--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         </main>
         <footer class="footer">
             <nav class="footer__links">
-                <a class="footer__link" href="#" target="_blank">Карты</a>
-                <a class="footer__link" href="#" target="_blank">Погода</a>
-                <a class="footer__link" href="#" target="_blank">Расписание</a>
-                <a class="footer__link" href="#" target="_blank">Календарь</a>
-                <a class="footer__link" href="#" target="_blank">Путешествия</a>
+                <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+                <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
             </nav>
             <p class="footer__copyright">© 2021. Денис Мяготин</p>
         </footer>
