--- a/index.html
+++ b/index.html
@@ -122,10 +122,12 @@
                 </article>
             </section>
             <section class="cover">
-                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
-                        <h2 class="cover__title">До Байкала «на собаках»</h2>
-                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                    </a>
+                <div class="cover__background"></div>  
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
+                    <div class="cover__background"></div>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                </a>      
             </section>
         </main>
         <footer class="footer">
