--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header">
             <img src="./images/header-logo.svg" class="header__logo" alt="логотип">
             <div class="header__lang-links">
-                <a href="#" class="header__lang-link" target="_self">Ru</a>
+                <a href="#" class="header__lang-link header__lang-link_active" target="_self">Ru</a>
                 <a href="#" class="header__lang-link" target="_self">En</a>
             </div>
         </header>
@@ -113,8 +113,7 @@
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </article>
             </section>
-            <section class="cover">
-                <div class="cover__background"></div>  
+            <section class="cover">  
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
                     <div class="cover__background"></div>
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
